warehouse id update

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,48 +2,213 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-07-10 20:45:28.833\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mget_token\u001b[0m:\u001b[36m103\u001b[0m - \u001b[32m\u001b[1mLogin successful!\u001b[0m\n"
+      "\u001b[32m2025-08-30 19:34:05.989\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mget_token\u001b[0m:\u001b[36m103\u001b[0m - \u001b[32m\u001b[1mLogin successful!\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'status': 1,\n",
-       " 'data': [],\n",
-       " 'errorMessageList': None,\n",
-       " 'fail': False,\n",
-       " 'success': True}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from update import *\n",
-    "\n",
-    "api = ProductAPI()\n",
-    "api.search_product(\"C0134001_S_Zhediedeng_01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'status': 1,\n",
-       " 'data': [],\n",
+       " 'data': [{'id': '68a03eb4a5680d4e18c58e71',\n",
+       "   'version': 2,\n",
+       "   'uuid': '87da80c4-64b3-4bf0-892a-7920b4eb324f',\n",
+       "   'color': None,\n",
+       "   'size': None,\n",
+       "   'option1': 'mainland_field_1',\n",
+       "   'option2': 'mainland_field_2',\n",
+       "   'option3': None,\n",
+       "   'barcodes': [],\n",
+       "   'weight': 0.03,\n",
+       "   'additional': {'hktv': {'stores': 'HKTV_S0000106360',\n",
+       "     'visibility': 'Y',\n",
+       "     'currency': 'RMB',\n",
+       "     'cost': None,\n",
+       "     'style': None,\n",
+       "     'urgent': None,\n",
+       "     'warranty': 'No',\n",
+       "     'storefront_store_code': 'C0889001',\n",
+       "     'contract_no': 455272,\n",
+       "     'product_ready_method': 'MLC',\n",
+       "     'delivery_method': 'hktv-standard-delivery',\n",
+       "     'store_sku_id': 'C0889001_S_67925402',\n",
+       "     'product_type_code': ['AA22801000001'],\n",
+       "     'primary_category': {'category_code': 'AA22801000001',\n",
+       "      'category_name': 'Sunglasses',\n",
+       "      'category_name_schi': '太阳镜',\n",
+       "      'category_name_tchi': '太陽眼鏡'},\n",
+       "     'root_category': {'category_code': 'AA22000000000',\n",
+       "      'category_name': \"Women's Fashion\",\n",
+       "      'category_name_schi': '女士服饰',\n",
+       "      'category_name_tchi': '女士服飾'},\n",
+       "     'is_primary_sku': 'Y',\n",
+       "     'sku_short_description_en': 'Transmission ratio classification: 2 types/Sunglasses  \\nPolarized: No  \\nEyewear structure: Full-frame  \\nUV protection level: UV400  \\nApplicable scenarios: Sun protection  \\nSupports: No  \\nLens material: PC  \\nFrame material: PC  \\nEyewear style: Square frame  \\nFrame material: PC',\n",
+       "     'sku_short_description_ch': '透射比分類:2類/遮陽鏡\\n是否偏光:否\\n眼鏡結構:全框\\n抗UV等級:UV400\\n適用場景:防曬\\n是否支持近視鏡:否\\n鏡片材質:PC\\n鏡框材質:PC\\n眼鏡款式:方框\\n鏡架材質:PC\\n',\n",
+       "     'sku_short_description_sc': '透射比分类:2类/遮阳镜\\n是否偏光:否\\n眼镜结构:全框\\n抗UV等级:UV400\\n适用场景:防晒\\n是否支持近视镜:否\\n镜片材质:PC\\n镜框材质:PC\\n眼镜款式:方框\\n镜架材质:PC\\n',\n",
+       "     'sku_long_description_en': None,\n",
+       "     'sku_long_description_ch': None,\n",
+       "     'sku_long_description_sc': None,\n",
+       "     'feature_start_time': None,\n",
+       "     'feature_end_time': None,\n",
+       "     'voucher_type': None,\n",
+       "     'voucher_display_type': None,\n",
+       "     'expiry_type': None,\n",
+       "     'redeem_start_date': None,\n",
+       "     'voucher_template_type': None,\n",
+       "     'fixed_redemption_date': None,\n",
+       "     'upon_purchase_date': None,\n",
+       "     'fine_print_en': None,\n",
+       "     'fine_print_ch': None,\n",
+       "     'fine_print_sc': None,\n",
+       "     'term_name': None,\n",
+       "     'selling_price': 5.3,\n",
+       "     'discount_text_en': None,\n",
+       "     'discount_text_ch': None,\n",
+       "     'discount_text_sc': None,\n",
+       "     'mall_dollar': 0,\n",
+       "     'vip_mall_dollar': 0.0,\n",
+       "     'user_max': None,\n",
+       "     'main_photo': 'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/b41c/0bd4/1da1/otkDmkqmbL20250816161741.jpg',\n",
+       "     'main_video': None,\n",
+       "     'variant_product_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/14ef/100b/fc8c/GKmREVuLLA20250816161743.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/a1a2/dc97/42b8/VPrWyHFfpk20250816161743.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d939/5f71/54dc/NqFKnzoOTy20250816161743.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/f09c/e1c7/f01c/FRGwMtkyDH20250816161742.jpg'],\n",
+       "     'other_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0526/777a/ca35/NzaFOXKpOQ20250816161749.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/060c/4a71/30e7/pfCDhCAqmw20250816161746.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/142e/f119/d468/mTjOKwtKqu20250816161746.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/39a4/81d8/4a77/gYynQzvmBO20250816161749.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/7721/0071/0b84/QWSwjserRN20250816161746.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/9d15/4c09/eaa1/sUnctddwvx20250816161746.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/aca3/573f/3aec/xxNWOpwzpG20250816161747.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/c600/1a77/161a/ZbYBlgOTxK20250816161748.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d4e1/9135/2055/iDxMbCsPxm20250816161748.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/e3d8/57aa/e26b/ZUaoxkJJWR20250816161745.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/edf8/3763/34fa/AzrNjpSlYf20250816161745.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/f7ad/2cfb/3fb8/WipXdEDlRh20250816161749.jpg'],\n",
+       "     'advertising_photo': None,\n",
+       "     'video_link': None,\n",
+       "     'video_link_text_en': None,\n",
+       "     'video_link_text_ch': None,\n",
+       "     'video_link_text_sc': None,\n",
+       "     'video_link2': None,\n",
+       "     'video_link_text_en2': None,\n",
+       "     'video_link_text_ch2': None,\n",
+       "     'video_link_text_sc2': None,\n",
+       "     'video_link3': None,\n",
+       "     'video_link_text_en3': None,\n",
+       "     'video_link_text_ch3': None,\n",
+       "     'video_link_text_sc3': None,\n",
+       "     'video_link4': None,\n",
+       "     'video_link_text_en4': None,\n",
+       "     'video_link_text_ch4': None,\n",
+       "     'video_link_text_sc4': None,\n",
+       "     'video_link5': None,\n",
+       "     'video_link_text_en5': None,\n",
+       "     'video_link_text_ch5': None,\n",
+       "     'video_link_text_sc5': None,\n",
+       "     'warehouse_id': 165316,\n",
+       "     'warehouse_code': None,\n",
+       "     'packing_spec_en': None,\n",
+       "     'packing_spec_ch': None,\n",
+       "     'packing_spec_sc': None,\n",
+       "     'invoice_remarks_en': None,\n",
+       "     'invoice_remarks_ch': None,\n",
+       "     'invoice_remarks_sc': None,\n",
+       "     'return_days': 7,\n",
+       "     'product_ready_days': '5',\n",
+       "     'pickup_days': 'MSU',\n",
+       "     'pickup_timeslot': 'AM/PM/EV',\n",
+       "     'need_removal_services': None,\n",
+       "     'goods_type': None,\n",
+       "     'warranty_period_unit': None,\n",
+       "     'warranty_period': None,\n",
+       "     'warranty_supplier_en': None,\n",
+       "     'warranty_supplier_ch': None,\n",
+       "     'warranty_supplier_sc': None,\n",
+       "     'service_centre_address_en': None,\n",
+       "     'service_centre_address_ch': None,\n",
+       "     'service_centre_address_sc': None,\n",
+       "     'service_centre_email': None,\n",
+       "     'service_centre_contact': None,\n",
+       "     'warranty_remark_en': None,\n",
+       "     'warranty_remark_ch': None,\n",
+       "     'warranty_remark_sc': None,\n",
+       "     'online_status': 'ONLINE',\n",
+       "     'rm_code': None,\n",
+       "     'virtual_store': None,\n",
+       "     'replicate_to_other_variants_skus': False,\n",
+       "     'presell_fruit': None,\n",
+       "     'physical_store': None,\n",
+       "     'thumbnail_video': None,\n",
+       "     'storage_type': None,\n",
+       "     'commission_rate': 100.0,\n",
+       "     'store_id': None,\n",
+       "     'video_filename': None,\n",
+       "     'delivery_district': None,\n",
+       "     'offline_due_to_rollback': None,\n",
+       "     'status': None,\n",
+       "     'affiliate_url': None,\n",
+       "     'extended_warranty_percentage_setting': None,\n",
+       "     'claim_link_en': None,\n",
+       "     'claim_link_ch': None,\n",
+       "     'claim_link_sc': None,\n",
+       "     'bind_extended_warranty_store_sku_ids': None,\n",
+       "     'hasEditing': None,\n",
+       "     'bundle_setting': None,\n",
+       "     'partner_info': {'everuts': None},\n",
+       "     'external_platform': None,\n",
+       "     'skuCode': False},\n",
+       "    'iids': {'mall_detail': [{'mall': 'hktv',\n",
+       "       'storefront_store_code': 'C0889001',\n",
+       "       'store_sku_id': 'C0889001_S_67925402',\n",
+       "       'stock_status': None}],\n",
+       "     'warehouse_detail': [{'mall': [], 'warehouse_seq_no': '70'},\n",
+       "      {'mall': [], 'warehouse_seq_no': '71'},\n",
+       "      {'mall': ['hktv'], 'warehouse_seq_no': '72'},\n",
+       "      {'mall': [], 'warehouse_seq_no': '73'},\n",
+       "      {'mall': [], 'warehouse_seq_no': '98'}]},\n",
+       "    'little_mall': None},\n",
+       "   'create_time': '2025-08-16T16:17:57',\n",
+       "   'create_user': 'OpenAPI-C0889001',\n",
+       "   'modified_time': '2025-08-30T19:32:39',\n",
+       "   'modified_user': 'system',\n",
+       "   'brand_id': 458362,\n",
+       "   'merchant_id': 42615,\n",
+       "   'sku_id': '67925402',\n",
+       "   'manufactured_country': 'HKSAR',\n",
+       "   'colour_families': None,\n",
+       "   'size_system': None,\n",
+       "   'option1_value': 'TO_481282e4-7e46-42e6-9566-dbfccc2eaf2c',\n",
+       "   'option2_value': 'ML_66de422a-dfdc-4f47-a948-963c1ef668b2',\n",
+       "   'option3_value': None,\n",
+       "   'packing_height': 11.0,\n",
+       "   'packing_length': 17.0,\n",
+       "   'packing_depth': 9.0,\n",
+       "   'packing_dimension_unit': 'cm',\n",
+       "   'weight_unit': 'kg',\n",
+       "   'storage_temperature': 'AIRCON',\n",
+       "   'packing_box_type': 'S',\n",
+       "   'original_price': 7.6,\n",
+       "   'product_id': '5374518',\n",
+       "   'minimum_shelf_life': None,\n",
+       "   'merchant_name': 'HKTV THE MARKET',\n",
+       "   'sku_name_en': 'Sunglasses for women  large frames  slimming  matte black for men  trendy Korean style  street style',\n",
+       "   'sku_name_ch': '太陽鏡女大框顯瘦素顏墨鏡男潮流韓版街拍小紅書眼鏡時尚',\n",
+       "   'sku_name_sc': '太阳镜女大框显瘦素颜墨镜男潮流韩版街拍小红书眼镜时尚',\n",
+       "   'applicable_service': None,\n",
+       "   'carton_size': None,\n",
+       "   'bundle_setting': None,\n",
+       "   'mms_create_user': None,\n",
+       "   'mms_create_time': None,\n",
+       "   'mms_modified_user': 'gigilee@hktv.com.hk',\n",
+       "   'mms_modified_time': [2025, 8, 30, 19, 32, 36, 845000000]}],\n",
        " 'errorMessageList': None,\n",
        " 'fail': False,\n",
        " 'success': True}"
@@ -55,7 +220,11 @@
     }
    ],
    "source": [
-    "api.search_product(\"C0134001_S_Mazha_1\")"
+    "from update import *\n",
+    "\n",
+    "api = ProductAPI()\n",
+    "\n",
+    "api.search_product(\"C0889001_S_67925402\")"
    ]
   },
   {
