warehouse id update fixed sku_id strip.0 issue

--- a/test.ipynb
+++ b/test.ipynb
@@ -229,10 +229,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 SKU_ID Warehouse\n",
+      "0   C0889001_S_67593037    165313\n",
+      "1   C0889001_S_67593038    165313\n",
+      "2   C0889001_S_67593040    165313\n",
+      "3   C0889001_S_67593042    165313\n",
+      "4   C0889001_S_67593045    165313\n",
+      "5   C0889001_S_67593047    165313\n",
+      "6   C0889001_S_67593048    165313\n",
+      "7   C0889001_S_67593049    165313\n",
+      "8   C0889001_S_67593050    165313\n",
+      "9   C0889001_S_67593051    165313\n",
+      "10  C0889001_S_67593052    165313\n",
+      "11  C0889001_S_67593053    165313\n",
+      "12  C0889001_S_67593054    165313\n",
+      "13  C0889001_S_67593055    165313\n",
+      "14  C0889001_S_67593056    165313\n",
+      "15  C0889001_S_67593059    165313\n",
+      "16  C0889001_S_67859461    165313\n",
+      "17  C0889001_S_67859466    165313\n",
+      "18  C0889001_S_67859469    165313\n",
+      "19  C0889001_S_67912715    165316\n",
+      "20  C0889001_S_67912719    165316\n",
+      "21  C0889001_S_67912721    165316\n",
+      "22  C0889001_S_67912723    165316\n",
+      "23  C0889001_S_67912727    165316\n",
+      "24  C0889001_S_67912729    165316\n",
+      "25  C0889001_S_67912732    165316\n",
+      "26  C0889001_S_67912736    165316\n",
+      "27  C0889001_S_67925402    165316\n",
+      "28  C0889001_S_67925405    165316\n",
+      "29  C0889001_S_67925408    165316\n",
+      "30  C0889001_S_67925410    165316\n",
+      "31  C0889001_S_67925412    165316\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = pd.read_excel(\"/Users/jasonsung/Downloads/test_data.xlsx\", dtype={\"SKU_ID\": str, \"Warehouse\": str})\n",
+    "print(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKU_ID       C0889001_S_67925410\n",
+      "Warehouse                 165316\n",
+      "Name: 30, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_columns = [\"sku_id\", \"warehouse\", \"record_id\", \"error_message\"]\n",
+    "for col in string_columns:\n",
+    "    if col in file.columns:\n",
+    "        file[col] = file[col].fillna(\"\").astype(str).str.rstrip(\".0\")\n",
+    "print(file.iloc[30])"
+   ]
   }
  ],
  "metadata": {
