check update status

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,42 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-08-30 19:34:05.989\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mget_token\u001b[0m:\u001b[36m103\u001b[0m - \u001b[32m\u001b[1mLogin successful!\u001b[0m\n"
+      "\u001b[32m2025-08-30 23:34:10.308\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mload_settings\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mConfig loaded from: ./config/account.json\u001b[0m\n",
+      "\u001b[32m2025-08-30 23:34:10.914\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mget_token\u001b[0m:\u001b[36m105\u001b[0m - \u001b[32m\u001b[1mLogin successful!\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'status': 1,\n",
-       " 'data': [{'id': '68a03eb4a5680d4e18c58e71',\n",
+       " 'data': [{'id': '68a2e91f58e4d338acf2b949',\n",
        "   'version': 2,\n",
-       "   'uuid': '87da80c4-64b3-4bf0-892a-7920b4eb324f',\n",
+       "   'uuid': '500b7ac4-eefa-402b-9980-04c2f1d67858',\n",
        "   'color': None,\n",
        "   'size': None,\n",
        "   'option1': 'mainland_field_1',\n",
        "   'option2': 'mainland_field_2',\n",
        "   'option3': None,\n",
        "   'barcodes': [],\n",
-       "   'weight': 0.03,\n",
+       "   'weight': 0.21,\n",
        "   'additional': {'hktv': {'stores': 'HKTV_S0000106360',\n",
        "     'visibility': 'Y',\n",
        "     'currency': 'RMB',\n",
        "     'cost': None,\n",
        "     'style': None,\n",
        "     'urgent': None,\n",
-       "     'warranty': 'No',\n",
+       "     'warranty': None,\n",
        "     'storefront_store_code': 'C0889001',\n",
        "     'contract_no': 455272,\n",
        "     'product_ready_method': 'MLC',\n",
        "     'delivery_method': 'hktv-standard-delivery',\n",
-       "     'store_sku_id': 'C0889001_S_67925402',\n",
+       "     'store_sku_id': 'C0889001_S_77224888',\n",
        "     'product_type_code': ['AA22801000001'],\n",
        "     'primary_category': {'category_code': 'AA22801000001',\n",
        "      'category_name': 'Sunglasses',\n",
@@ -47,13 +48,13 @@
        "      'category_name': \"Women's Fashion\",\n",
        "      'category_name_schi': '女士服饰',\n",
        "      'category_name_tchi': '女士服飾'},\n",
-       "     'is_primary_sku': 'Y',\n",
-       "     'sku_short_description_en': 'Transmission ratio classification: 2 types/Sunglasses  \\nPolarized: No  \\nEyewear structure: Full-frame  \\nUV protection level: UV400  \\nApplicable scenarios: Sun protection  \\nSupports: No  \\nLens material: PC  \\nFrame material: PC  \\nEyewear style: Square frame  \\nFrame material: PC',\n",
-       "     'sku_short_description_ch': '透射比分類:2類/遮陽鏡\\n是否偏光:否\\n眼鏡結構:全框\\n抗UV等級:UV400\\n適用場景:防曬\\n是否支持近視鏡:否\\n鏡片材質:PC\\n鏡框材質:PC\\n眼鏡款式:方框\\n鏡架材質:PC\\n',\n",
-       "     'sku_short_description_sc': '透射比分类:2类/遮阳镜\\n是否偏光:否\\n眼镜结构:全框\\n抗UV等级:UV400\\n适用场景:防晒\\n是否支持近视镜:否\\n镜片材质:PC\\n镜框材质:PC\\n眼镜款式:方框\\n镜架材质:PC\\n',\n",
-       "     'sku_long_description_en': None,\n",
-       "     'sku_long_description_ch': None,\n",
-       "     'sku_long_description_sc': None,\n",
+       "     'is_primary_sku': 'N',\n",
+       "     'sku_short_description_en': 'Lens Material: PC  \\nFrame Material: Plastic + Metal  \\n',\n",
+       "     'sku_short_description_ch': '鏡片材料:PC\\n鏡架材料:塑料+金屬\\n',\n",
+       "     'sku_short_description_sc': '镜片材料:PC\\n镜架材料:塑料+金属\\n',\n",
+       "     'sku_long_description_en': 'Transmittance Classification: Category 2 / Sunglasses  \\nPolarized: No  \\nEyewear Structure: Full Frame  \\nStyle: Polygonal  \\nUV Resistance Level: UV400  \\nApplicable Scenario: Sun Protection  \\nTrend Element: Internet Hit  \\nStyle: Casual  \\nTarget Audience: Women  \\nOEM: Available  \\nLogo Printing: Available\\n',\n",
+       "     'sku_long_description_ch': '透射比分類:2類/遮陽鏡\\n是否偏光:否\\n眼鏡結構:全框\\n眼鏡款式:多邊形\\n抗UV等級:UV400\\n適用場景:防曬\\n流行元素:網紅爆款\\n風格:休閒\\n適用人群:女士\\nOEM:可以\\n加印logo:可以\\n\\n',\n",
+       "     'sku_long_description_sc': '透射比分类:2类/遮阳镜\\n是否偏光:否\\n眼镜结构:全框\\n眼镜款式:多边形\\n抗UV等级:UV400\\n适用场景:防晒\\n流行元素:网红爆款\\n风格:休闲\\n适用人群:女士\\nOEM:可以\\n加印logo:可以\\n\\n',\n",
        "     'feature_start_time': None,\n",
        "     'feature_end_time': None,\n",
        "     'voucher_type': None,\n",
@@ -67,31 +68,40 @@
        "     'fine_print_ch': None,\n",
        "     'fine_print_sc': None,\n",
        "     'term_name': None,\n",
-       "     'selling_price': 5.3,\n",
+       "     'selling_price': 19.8,\n",
        "     'discount_text_en': None,\n",
        "     'discount_text_ch': None,\n",
        "     'discount_text_sc': None,\n",
        "     'mall_dollar': 0,\n",
-       "     'vip_mall_dollar': 0.0,\n",
+       "     'vip_mall_dollar': 0,\n",
        "     'user_max': None,\n",
-       "     'main_photo': 'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/b41c/0bd4/1da1/otkDmkqmbL20250816161741.jpg',\n",
+       "     'main_photo': 'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/8b1d/8b8d/ab2b/mIgskySXLg20250818164930.jpg',\n",
        "     'main_video': None,\n",
-       "     'variant_product_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/14ef/100b/fc8c/GKmREVuLLA20250816161743.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/a1a2/dc97/42b8/VPrWyHFfpk20250816161743.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d939/5f71/54dc/NqFKnzoOTy20250816161743.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/f09c/e1c7/f01c/FRGwMtkyDH20250816161742.jpg'],\n",
-       "     'other_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0526/777a/ca35/NzaFOXKpOQ20250816161749.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/060c/4a71/30e7/pfCDhCAqmw20250816161746.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/142e/f119/d468/mTjOKwtKqu20250816161746.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/39a4/81d8/4a77/gYynQzvmBO20250816161749.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/7721/0071/0b84/QWSwjserRN20250816161746.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/9d15/4c09/eaa1/sUnctddwvx20250816161746.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/aca3/573f/3aec/xxNWOpwzpG20250816161747.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/c600/1a77/161a/ZbYBlgOTxK20250816161748.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d4e1/9135/2055/iDxMbCsPxm20250816161748.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/e3d8/57aa/e26b/ZUaoxkJJWR20250816161745.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/edf8/3763/34fa/AzrNjpSlYf20250816161745.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/f7ad/2cfb/3fb8/WipXdEDlRh20250816161749.jpg'],\n",
+       "     'variant_product_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/8102/d88d/4ae6/YwCkBVIpht20250818164931.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/af17/9712/b340/ryUVyRPpfJ20250818164931.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/7fc4/4af6/0cf6/hIuiCVmmzM20250818164931.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/5c9d/38e9/6dd1/hhTHPewmiR20250818164931.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/09af/08d5/3e6d/nfYSJmfDmj20250818164932.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/ef50/cd00/bf6c/hwapLkgdVr20250818164932.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/eef2/16ee/29a9/rXIrkdIWBT20250818164932.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d89b/521e/a887/OLVQyyVomc20250818164932.jpg'],\n",
+       "     'other_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0d24/6f82/ffa9/vMuKnqjdqF20250818164932.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/2c1c/e741/4f85/PguwbFOloT20250818164932.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/de24/f717/f701/JVoSpHttyD20250818164932.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/4ae9/22e5/d3b7/LMWymOCUwD20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/2fb5/1337/1a8b/xTXupjddBF20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/05b5/00ed/b5ba/RCHclNsOMz20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0d72/5c8b/1221/qHTZlsoGWv20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0d7f/d7ba/4c7d/hBxJSrGGFA20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/ecf1/17c7/bba6/yOvgHuzFGL20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/c6d3/6dec/6f3d/NUxLpmqUIn20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/101b/bd67/241b/JRjyNJBTeD20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/48e3/f0a2/7cb0/ufzHcBDmKY20250818164933.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/7f6f/08a7/d9c3/dyLpEdnOJx20250818164934.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d142/22e6/32c6/MKAKdtQVvX20250818164934.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/e74a/0204/0461/XfrNAnQuWv20250818164934.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/59e8/2b74/1483/VXvOBCFOvS20250818164934.jpg',\n",
+       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/bf6b/6ddb/26d2/XwJPkvnhiY20250818164934.jpg'],\n",
        "     'advertising_photo': None,\n",
        "     'video_link': None,\n",
        "     'video_link_text_en': None,\n",
@@ -113,7 +123,7 @@
        "     'video_link_text_en5': None,\n",
        "     'video_link_text_ch5': None,\n",
        "     'video_link_text_sc5': None,\n",
-       "     'warehouse_id': 165316,\n",
+       "     'warehouse_id': 159112,\n",
        "     'warehouse_code': None,\n",
        "     'packing_spec_en': None,\n",
        "     'packing_spec_ch': None,\n",
@@ -143,7 +153,6 @@
        "     'online_status': 'ONLINE',\n",
        "     'rm_code': None,\n",
        "     'virtual_store': None,\n",
-       "     'replicate_to_other_variants_skus': False,\n",
        "     'presell_fruit': None,\n",
        "     'physical_store': None,\n",
        "     'thumbnail_video': None,\n",
@@ -162,59 +171,61 @@
        "     'bind_extended_warranty_store_sku_ids': None,\n",
        "     'hasEditing': None,\n",
        "     'bundle_setting': None,\n",
-       "     'partner_info': {'everuts': None},\n",
-       "     'external_platform': None,\n",
+       "     'partner_info': None,\n",
+       "     'external_platform': {'source': ['TMALL'],\n",
+       "      'product_id': '797016774341',\n",
+       "      'sku_id': None},\n",
        "     'skuCode': False},\n",
        "    'iids': {'mall_detail': [{'mall': 'hktv',\n",
        "       'storefront_store_code': 'C0889001',\n",
-       "       'store_sku_id': 'C0889001_S_67925402',\n",
+       "       'store_sku_id': 'C0889001_S_77224888',\n",
        "       'stock_status': None}],\n",
-       "     'warehouse_detail': [{'mall': [], 'warehouse_seq_no': '70'},\n",
+       "     'warehouse_detail': [{'mall': ['hktv'], 'warehouse_seq_no': '70'},\n",
        "      {'mall': [], 'warehouse_seq_no': '71'},\n",
-       "      {'mall': ['hktv'], 'warehouse_seq_no': '72'},\n",
+       "      {'mall': [], 'warehouse_seq_no': '72'},\n",
        "      {'mall': [], 'warehouse_seq_no': '73'},\n",
        "      {'mall': [], 'warehouse_seq_no': '98'}]},\n",
        "    'little_mall': None},\n",
-       "   'create_time': '2025-08-16T16:17:57',\n",
+       "   'create_time': '2025-08-18T16:49:36',\n",
        "   'create_user': 'OpenAPI-C0889001',\n",
-       "   'modified_time': '2025-08-30T19:32:39',\n",
+       "   'modified_time': '2025-08-28T15:24:17',\n",
        "   'modified_user': 'system',\n",
        "   'brand_id': 458362,\n",
        "   'merchant_id': 42615,\n",
-       "   'sku_id': '67925402',\n",
-       "   'manufactured_country': 'HKSAR',\n",
+       "   'sku_id': '77224888',\n",
+       "   'manufactured_country': 'CN/HK',\n",
        "   'colour_families': None,\n",
        "   'size_system': None,\n",
-       "   'option1_value': 'TO_481282e4-7e46-42e6-9566-dbfccc2eaf2c',\n",
+       "   'option1_value': 'ML_8e2376d2-4ba2-476f-a861-92609654f42f',\n",
        "   'option2_value': 'ML_66de422a-dfdc-4f47-a948-963c1ef668b2',\n",
        "   'option3_value': None,\n",
-       "   'packing_height': 11.0,\n",
-       "   'packing_length': 17.0,\n",
-       "   'packing_depth': 9.0,\n",
+       "   'packing_height': 11,\n",
+       "   'packing_length': 17,\n",
+       "   'packing_depth': 9,\n",
        "   'packing_dimension_unit': 'cm',\n",
        "   'weight_unit': 'kg',\n",
        "   'storage_temperature': 'AIRCON',\n",
        "   'packing_box_type': 'S',\n",
-       "   'original_price': 7.6,\n",
-       "   'product_id': '5374518',\n",
+       "   'original_price': 28.3,\n",
+       "   'product_id': '6272135',\n",
        "   'minimum_shelf_life': None,\n",
        "   'merchant_name': 'HKTV THE MARKET',\n",
-       "   'sku_name_en': 'Sunglasses for women  large frames  slimming  matte black for men  trendy Korean style  street style',\n",
-       "   'sku_name_ch': '太陽鏡女大框顯瘦素顏墨鏡男潮流韓版街拍小紅書眼鏡時尚',\n",
-       "   'sku_name_sc': '太阳镜女大框显瘦素颜墨镜男潮流韩版街拍小红书眼镜时尚',\n",
+       "   'sku_name_en': \"Same Style GM Women's Sunglasses Recommended UV Protection Square Frame Metal Leg Sunglasses\",\n",
+       "   'sku_name_ch': '同款gm墨鏡女 博薦防紫外線方形大框金屬腿太陽眼鏡',\n",
+       "   'sku_name_sc': '同款gm墨镜女 博荐防紫外线方形大框金属腿太阳眼镜',\n",
        "   'applicable_service': None,\n",
        "   'carton_size': None,\n",
        "   'bundle_setting': None,\n",
        "   'mms_create_user': None,\n",
        "   'mms_create_time': None,\n",
-       "   'mms_modified_user': 'gigilee@hktv.com.hk',\n",
-       "   'mms_modified_time': [2025, 8, 30, 19, 32, 36, 845000000]}],\n",
+       "   'mms_modified_user': 'wkpang@hktv.com.hk',\n",
+       "   'mms_modified_time': [2025, 8, 28, 14, 18, 2]}],\n",
        " 'errorMessageList': None,\n",
        " 'fail': False,\n",
        " 'success': True}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,75 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 SKU_ID Warehouse\n",
-      "0   C0889001_S_67593037    165313\n",
-      "1   C0889001_S_67593038    165313\n",
-      "2   C0889001_S_67593040    165313\n",
-      "3   C0889001_S_67593042    165313\n",
-      "4   C0889001_S_67593045    165313\n",
-      "5   C0889001_S_67593047    165313\n",
-      "6   C0889001_S_67593048    165313\n",
-      "7   C0889001_S_67593049    165313\n",
-      "8   C0889001_S_67593050    165313\n",
-      "9   C0889001_S_67593051    165313\n",
-      "10  C0889001_S_67593052    165313\n",
-      "11  C0889001_S_67593053    165313\n",
-      "12  C0889001_S_67593054    165313\n",
-      "13  C0889001_S_67593055    165313\n",
-      "14  C0889001_S_67593056    165313\n",
-      "15  C0889001_S_67593059    165313\n",
-      "16  C0889001_S_67859461    165313\n",
-      "17  C0889001_S_67859466    165313\n",
-      "18  C0889001_S_67859469    165313\n",
-      "19  C0889001_S_67912715    165316\n",
-      "20  C0889001_S_67912719    165316\n",
-      "21  C0889001_S_67912721    165316\n",
-      "22  C0889001_S_67912723    165316\n",
-      "23  C0889001_S_67912727    165316\n",
-      "24  C0889001_S_67912729    165316\n",
-      "25  C0889001_S_67912732    165316\n",
-      "26  C0889001_S_67912736    165316\n",
-      "27  C0889001_S_67925402    165316\n",
-      "28  C0889001_S_67925405    165316\n",
-      "29  C0889001_S_67925408    165316\n",
-      "30  C0889001_S_67925410    165316\n",
-      "31  C0889001_S_67925412    165316\n"
+      "{'status': 1, 'data': [{'recordId': 53872444, 'status': 'SUCCESS', 'rows': [{'status': 'SUCCESS', 'uuid': '4ccaa895-da7b-4856-9021-bd5da14169ad', 'skuId': '68080320', 'errorMessage': None}]}], 'errorMessageList': None, 'fail': False, 'success': True}\n"
      ]
     }
    ],
    "source": [
-    "file = pd.read_excel(\"/Users/jasonsung/Downloads/test_data.xlsx\", dtype={\"SKU_ID\": str, \"Warehouse\": str})\n",
-    "print(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SKU_ID       C0889001_S_67925410\n",
-      "Warehouse                 165316\n",
-      "Name: 30, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "string_columns = [\"sku_id\", \"warehouse\", \"record_id\", \"error_message\"]\n",
-    "for col in string_columns:\n",
-    "    if col in file.columns:\n",
-    "        file[col] = file[col].fillna(\"\").astype(str).str.rstrip(\".0\")\n",
-    "print(file.iloc[30])"
+    "result = api.get_update_status(\"53872444\")\n",
+    "print(result)"
    ]
   }
  ],
